--- a/app/Location/show.erb
+++ b/app/Location/show.erb
@@ -1,6 +1,6 @@
 <div class="toolbar">
 	<h1 id="pageTitle">
-		<%=@location.latitude%>
+		<%= @location.title %>
 	</h1>
 </div>
 
@@ -11,34 +11,44 @@
 <table class="grid">
   
   <tr>
-	<td class="gridleft">Latitude</td>
-    <td class="gridright"><%=@location.latitude%></td>
+    <td class="gridleft">Title</td>
+    <td class="gridright"><%= @location.title %></td>
+  </tr>
+  <tr>
+    <td class="gridleft">Latitude</td>
+    <td class="gridright"><%= @location.latitude %></td>
   </tr>
   
   <tr>
-	<td class="gridleft">Longitude</td>
-    <td class="gridright"><%=@location.longitude%></td>
+    <td class="gridleft">Longitude</td>
+    <td class="gridright"><%= @location.longitude %></td>
   </tr>
   
   <tr>
-	<td class="gridleft">StreetAddress</td>
-    <td class="gridright"><%=@location.street_address%></td>
+    <td class="gridleft">Street Address</td>
+    <td class="gridright"><%= @location.street_address %></td>
   </tr>
   
   <tr>
-	<td class="gridleft">City</td>
-    <td class="gridright"><%=@location.city%></td>
+    <td class="gridleft">City</td>
+    <td class="gridright"><%= @location.city %></td>
   </tr>
   
   <tr>
-	<td class="gridleft">State</td>
-    <td class="gridright"><%=@location.state%></td>
+    <td class="gridleft">State</td>
+    <td class="gridright"><%= @location.state %></td>
   </tr>
   
   <tr>
-	<td class="gridleft">ZipCode</td>
-    <td class="gridright"><%=@location.zip_code%></td>
+    <td class="gridleft">Zip Code</td>
+    <td class="gridright"><%= @location.zip_code %></td>
   </tr>
-  
+
 </table>
+
+<form method="POST" action="<%= url_for(:action => :add_current_lat_long) %>">
+<input type="hidden" name="id" value="<%= @location.object %>"/> 
+<input type="submit" value="Use current location fo fill in lat/long"/>
+</form>
+
 </div>
