New version of geolocation, now with mapping.

--- a/app/Location/new.erb
+++ b/app/Location/new.erb
@@ -1,53 +1,23 @@
 <div class="toolbar">
-	<h1 id="pageTitle">
-		New Location
-	</h1>
+  <h1 id="pageTitle">
+    Current Location
+  </h1>
 </div>
 
-<form title="New Location" 
-	  class="panel"
-	  id="location_new_form" 
-	  method="POST" 
-	  action="<%=url_for(:action => :create)%>" selected="true">
-	<fieldset>
-		<input type="hidden" name="id" value="<%=@location.object%>"/>
-		
-                  <div class="row">
-                          <label>Title: </label>
-                          <input type="text" name="location[title]"/>
-                  </div>
+<div class="panel" selected="true">
 
-		  <div class="row">
-			  <label>Street address: </label>
-			  <input type="text" name="location[street_address]"/>
-		  </div>
-		
-		  <div class="row">
-			  <label>City: </label>
-			  <input type="text" name="location[city]"/>
-		  </div>
-		
-		  <div class="row">
-			  <label>State: </label>
-			  <input type="text" name="location[state]"/>
-		  </div>
-		
-		  <div class="row">
-			  <label>Zip code: </label>
-			  <input type="text" name="location[zip_code]"/>
-		  </div>
+<table class="grid">
+  
+  <tr>
+    <td class="gridleft">Latitude</td>
+    <td class="gridright" id="latitude_td"><%= @location.latitude.to_s %></td>
+  </tr>
+  
+  <tr>
+    <td class="gridleft">Longitude</td>
+    <td class="gridright" id="longitude_td"><%= @location.longitude.to_s %></td>
+  </tr>
 
-                  <div class="row">
-                          <label>Latitude: </label>
-                          <input type="text" name="location[latitude]"/>
-                  </div>
+</table>
+</div>
 
-                  <div class="row">
-                          <label>Longitude: </label>
-                          <input type="text" name="location[longitude]"/>
-                  </div>
-
-		
-	</fieldset>
-	<input type="submit" value="Create"/>
-</form>
